--- a/src/2.train.ipynb
+++ b/src/2.train.ipynb
@@ -141,11 +141,11 @@
      "text": [
       "Epoch    Loss       Train Acc    Test Acc  \n",
       "------------------------------------------\n",
-      "0        0.9134     0.0400       0.0637    \n",
-      "10       0.4772     0.9498       0.9513    \n",
-      "20       0.2277     0.9639       0.9631    \n",
-      "30       0.1150     0.9693       0.9681    \n",
-      "40       0.0794     0.9732       0.9725    \n"
+      "0        0.8106     0.4999       0.5000    \n",
+      "10       0.3910     0.9614       0.9665    \n",
+      "20       0.1513     0.9771       0.9762    \n",
+      "30       0.0737     0.9784       0.9775    \n",
+      "40       0.0565     0.9802       0.9792    \n"
      ]
     }
    ],
@@ -221,7 +221,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "venv (3.9.6)",
    "language": "python",
    "name": "python3"
   },
@@ -235,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
