--- a/src/3.inputs.ipynb
+++ b/src/3.inputs.ipynb
@@ -237,7 +237,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "venv (3.9.6)",
    "language": "python",
    "name": "python3"
   },
@@ -251,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
