--- a/src/6.kalman.ipynb
+++ b/src/6.kalman.ipynb
@@ -137,76 +137,76 @@
      "text": [
       "RSSI   ETX   Delay  Busy   APMR   MFSR   IDG    Classe   Status   Confiança \n",
       "---------------------------------------------------------------------------\n",
-      "-74    3.7   91     0.31   0.79   0.94   0.85   1        Bom      0.52      \n",
-      "-31    1.7   29     0.06   0.77   0.76   0.78   1        Bom      0.86      \n",
-      "-68    4.0   96     0.70   0.94   0.85   0.90   1        Bom      0.70      \n",
-      "-51    1.5   17     0.25   0.47   0.66   0.59   1        Bom      0.71      \n",
-      "-46    1.1   17     0.38   0.81   0.87   0.71   1        Bom      0.76      \n",
-      "-80    7.4   92     0.65   0.84   0.85   0.77   1        Bom      0.70      \n",
-      "-39    1.1   15     0.04   0.67   0.70   0.63   1        Bom      0.72      \n",
-      "-57    7.9   96     0.61   0.64   0.64   0.65   1        Bom      0.67      \n",
-      "-67    3.9   57     0.25   0.79   0.84   0.68   1        Bom      0.66      \n",
-      "-62    8.6   83     0.43   0.57   0.67   0.50   1        Bom      0.62      \n",
-      "-49    2.7   33     0.28   0.90   0.77   0.90   1        Bom      0.65      \n",
-      "-62    8.1   80     0.52   0.83   0.89   0.89   1        Bom      0.64      \n",
-      "-56    2.0   14     0.11   0.74   0.73   0.71   1        Bom      0.66      \n",
-      "-78    7.3   66     0.53   0.88   0.86   0.71   1        Bom      0.64      \n",
-      "-54    1.9   7      0.34   0.62   0.63   0.48   1        Bom      0.65      \n",
-      "-71    8.7   46     0.85   0.90   0.75   0.70   1        Bom      0.64      \n",
-      "-36    2.4   4      0.18   0.94   0.86   0.72   1        Bom      0.67      \n",
-      "-64    9.7   99     0.51   0.63   0.58   0.67   1        Bom      0.64      \n",
-      "-56    3.2   4      0.33   0.57   0.67   0.64   1        Bom      0.65      \n",
-      "-45    3.8   37     0.38   0.78   0.95   0.73   1        Bom      0.67      \n",
-      "-68    3.7   84     0.60   0.78   0.84   0.73   1        Bom      0.65      \n",
-      "-45    3.9   33     0.28   0.73   0.74   0.68   1        Bom      0.67      \n",
-      "-68    8.9   74     0.32   0.76   0.91   0.68   1        Bom      0.65      \n",
-      "-65    4.2   100    0.63   0.91   0.83   0.89   1        Bom      0.64      \n",
-      "-44    3.2   8      0.07   0.87   0.82   0.78   1        Bom      0.66      \n",
-      "-71    9.2   88     0.46   0.49   0.55   0.53   1        Bom      0.63      \n",
-      "-74    6.1   38     0.45   0.55   0.53   0.53   1        Bom      0.60      \n",
-      "-67    9.9   89     0.56   0.46   0.60   0.59   1        Bom      0.57      \n",
-      "-75    4.8   78     0.29   0.60   0.67   0.53   1        Bom      0.56      \n",
-      "-57    5.2   83     0.29   0.82   0.93   0.86   1        Bom      0.55      \n",
-      "-50    2.4   9      0.07   0.65   0.55   0.68   1        Bom      0.58      \n",
-      "-68    4.8   55     0.62   0.51   0.53   0.64   1        Bom      0.55      \n",
-      "-80    3.6   83     0.70   0.62   0.63   0.56   1        Bom      0.53      \n",
-      "-66    9.8   100    0.49   0.46   0.55   0.64   1        Bom      0.51      \n",
-      "-71    9.0   86     0.45   0.77   0.83   0.87   1        Bom      0.51      \n",
-      "-33    1.9   8      0.17   0.94   0.86   0.82   1        Bom      0.55      \n",
-      "-34    3.9   14     0.25   0.58   0.61   0.63   1        Bom      0.57      \n",
-      "-42    2.1   10     0.07   0.52   0.53   0.55   1        Bom      0.58      \n",
-      "-90    8.7   92     0.38   0.51   0.52   0.66   1        Bom      0.56      \n",
-      "-86    8.7   76     0.38   0.80   0.88   0.76   1        Bom      0.55      \n",
-      "-62    7.5   8      0.74   0.54   0.68   0.62   1        Bom      0.54      \n",
-      "-64    7.5   97     0.88   0.53   0.53   0.60   1        Bom      0.52      \n",
-      "-56    7.3   30     0.68   0.71   0.62   0.52   1        Bom      0.50      \n",
-      "-69    3.5   32     0.29   0.56   0.74   0.53   1        Bom      0.52      \n",
-      "-67    2.4   23     0.14   0.89   0.95   0.90   1        Bom      0.56      \n",
-      "-85    3.9   30     0.96   0.83   0.82   0.77   1        Bom      0.55      \n",
-      "-67    7.5   56     0.78   0.84   0.80   0.81   1        Bom      0.55      \n",
-      "-74    6.5   33     0.36   0.72   0.72   0.80   1        Bom      0.54      \n",
-      "-70    6.8   82     0.59   0.73   0.67   0.56   1        Bom      0.53      \n",
-      "-56    3.9   29     0.08   0.86   0.78   0.70   1        Bom      0.56      \n",
-      "-44    3.7   14     0.27   0.78   0.94   0.87   1        Bom      0.59      \n",
-      "-81    9.8   79     0.68   0.73   0.65   0.58   1        Bom      0.58      \n",
-      "-61    1.6   20     0.09   0.63   0.68   0.66   1        Bom      0.60      \n",
-      "-46    3.3   37     0.08   0.90   0.89   0.70   1        Bom      0.63      \n",
-      "-37    1.7   8      0.32   0.51   0.62   0.64   1        Bom      0.64      \n",
-      "-65    3.4   85     0.60   0.64   0.64   0.60   1        Bom      0.61      \n",
-      "-45    4.9   2      0.08   0.75   0.53   0.68   1        Bom      0.63      \n",
-      "-31    3.4   6      0.30   0.77   0.83   0.74   1        Bom      0.65      \n",
-      "-32    1.7   16     0.11   0.66   0.54   0.55   1        Bom      0.66      \n",
-      "-56    1.1   19     0.08   0.80   0.82   0.82   1        Bom      0.68      \n",
-      "-35    3.5   4      0.39   0.55   0.68   0.66   1        Bom      0.69      \n",
-      "-45    3.7   7      0.38   0.93   0.95   0.88   1        Bom      0.72      \n",
-      "-44    1.9   19     0.06   0.50   0.65   0.66   1        Bom      0.72      \n",
-      "-34    2.6   15     0.23   0.52   0.52   0.58   1        Bom      0.72      \n",
-      "-48    2.1   23     0.03   0.79   0.93   0.81   1        Bom      0.74      \n",
-      "-58    2.5   40     0.28   0.88   0.91   0.81   1        Bom      0.75      \n",
-      "-54    3.1   31     0.21   0.84   0.85   0.75   1        Bom      0.77      \n",
-      "-53    2.8   10     0.26   0.89   0.93   0.75   1        Bom      0.78      \n",
-      "-42    1.1   27     0.01   0.87   0.88   0.84   1        Bom      0.79      \n",
-      "-49    2.3   11     0.34   0.80   0.93   0.90   1        Bom      0.81      \n"
+      "-64    3.3   21     0.37   0.84   0.84   0.78   1        Bom      0.88      \n",
+      "-56    1.9   40     0.07   0.82   0.93   0.76   1        Bom      0.91      \n",
+      "-78    6.2   99     0.57   0.53   0.57   0.60   1        Bom      0.62      \n",
+      "-64    3.5   2      0.36   0.85   0.84   0.76   1        Bom      0.71      \n",
+      "-66    4.0   60     0.29   0.94   0.89   0.86   1        Bom      0.68      \n",
+      "-59    4.0   17     0.35   0.49   0.67   0.60   1        Bom      0.69      \n",
+      "-50    3.2   36     0.05   0.80   0.90   0.69   1        Bom      0.73      \n",
+      "-79    3.9   94     0.45   0.81   0.86   0.76   1        Bom      0.69      \n",
+      "-79    6.6   32     0.43   0.83   0.94   0.82   1        Bom      0.67      \n",
+      "-49    3.6   21     0.33   0.84   0.91   0.90   1        Bom      0.70      \n",
+      "-59    2.8   35     0.25   0.77   0.84   0.81   1        Bom      0.72      \n",
+      "-84    9.4   72     0.64   0.53   0.65   0.51   1        Bom      0.68      \n",
+      "-74    4.3   58     0.87   0.83   0.91   0.87   1        Bom      0.66      \n",
+      "-61    6.8   39     0.82   0.95   0.90   0.71   1        Bom      0.65      \n",
+      "-71    8.2   65     0.85   0.89   0.83   0.89   1        Bom      0.63      \n",
+      "-60    1.7   4      0.17   0.82   0.94   0.78   1        Bom      0.66      \n",
+      "-38    1.5   38     0.31   0.58   0.55   0.68   1        Bom      0.67      \n",
+      "-65    3.4   40     0.66   0.93   0.90   0.77   1        Bom      0.66      \n",
+      "-39    1.3   10     0.11   0.90   0.87   0.86   1        Bom      0.69      \n",
+      "-58    1.4   7      0.05   0.77   0.87   0.73   1        Bom      0.71      \n",
+      "-53    1.0   10     0.28   0.60   0.69   0.46   1        Bom      0.71      \n",
+      "-37    1.1   34     0.01   0.69   0.76   0.51   1        Bom      0.72      \n",
+      "-35    2.4   34     0.19   0.71   0.53   0.57   1        Bom      0.73      \n",
+      "-68    9.4   86     0.62   0.48   0.50   0.67   1        Bom      0.69      \n",
+      "-65    4.1   33     0.27   0.76   0.95   0.74   1        Bom      0.70      \n",
+      "-75    7.3   67     0.91   0.83   0.82   0.82   1        Bom      0.68      \n",
+      "-51    2.1   36     0.12   0.81   0.91   0.70   1        Bom      0.70      \n",
+      "-32    3.8   36     0.00   0.76   0.84   0.87   1        Bom      0.72      \n",
+      "-63    7.0   56     0.85   0.82   0.59   0.47   1        Bom      0.69      \n",
+      "-48    1.7   38     0.37   0.94   0.83   0.79   1        Bom      0.71      \n",
+      "-49    3.6   35     0.12   0.84   0.92   0.70   1        Bom      0.73      \n",
+      "-50    3.7   11     0.10   0.63   0.73   0.48   1        Bom      0.73      \n",
+      "-42    5.7   43     0.56   0.81   0.83   0.72   1        Bom      0.71      \n",
+      "-77    7.9   58     0.84   0.69   0.94   0.89   1        Bom      0.69      \n",
+      "-59    1.5   38     0.34   0.67   0.69   0.62   1        Bom      0.70      \n",
+      "-70    6.9   74     0.46   0.64   0.61   0.62   1        Bom      0.67      \n",
+      "-64    7.1   34     0.99   0.65   0.77   0.55   1        Bom      0.65      \n",
+      "-52    2.1   27     0.26   0.81   0.95   0.77   1        Bom      0.67      \n",
+      "-56    3.5   23     0.24   0.77   0.92   0.88   1        Bom      0.69      \n",
+      "-64    1.9   22     0.39   0.84   0.58   0.58   1        Bom      0.71      \n",
+      "-40    1.6   21     0.14   0.80   0.93   0.85   1        Bom      0.73      \n",
+      "-52    1.5   4      0.19   0.86   0.92   0.80   1        Bom      0.74      \n",
+      "-71    9.9   40     0.66   0.50   0.54   0.54   1        Bom      0.70      \n",
+      "-58    3.8   32     0.29   0.68   0.66   0.51   1        Bom      0.71      \n",
+      "-59    4.8   23     0.81   0.60   0.67   0.59   1        Bom      0.68      \n",
+      "-50    1.1   19     0.22   0.91   0.95   0.86   1        Bom      0.70      \n",
+      "-63    3.3   14     0.72   0.65   0.74   0.50   1        Bom      0.68      \n",
+      "-46    3.9   1      0.24   0.76   0.88   0.85   1        Bom      0.70      \n",
+      "-46    1.6   27     0.20   0.83   0.80   0.72   1        Bom      0.72      \n",
+      "-69    7.0   80     0.76   0.80   0.88   0.84   1        Bom      0.70      \n",
+      "-58    1.6   11     0.24   0.66   0.71   0.49   1        Bom      0.71      \n",
+      "-71    3.6   33     0.97   0.69   0.52   0.54   1        Bom      0.67      \n",
+      "-37    2.6   8      0.38   0.83   0.92   0.70   1        Bom      0.70      \n",
+      "-85    8.4   64     0.31   0.59   0.50   0.46   1        Bom      0.66      \n",
+      "-57    7.2   55     0.83   0.80   0.94   0.68   1        Bom      0.65      \n",
+      "-64    1.1   36     0.23   0.86   0.94   0.90   1        Bom      0.67      \n",
+      "-75    2.3   20     0.33   0.68   0.74   0.49   1        Bom      0.68      \n",
+      "-81    3.7   43     0.32   0.54   0.55   0.73   1        Bom      0.66      \n",
+      "-61    3.9   34     0.34   0.60   0.65   0.57   1        Bom      0.66      \n",
+      "-39    2.6   39     0.09   0.54   0.62   0.63   1        Bom      0.67      \n",
+      "-68    4.5   41     0.79   0.68   0.66   0.65   1        Bom      0.64      \n",
+      "-56    4.5   36     0.34   0.67   0.76   0.50   1        Bom      0.65      \n",
+      "-75    5.0   59     0.66   0.54   0.59   0.57   1        Bom      0.62      \n",
+      "-89    8.1   27     0.38   0.48   0.51   0.47   1        Bom      0.59      \n",
+      "-86    4.7   50     0.79   0.48   0.76   0.54   1        Bom      0.57      \n",
+      "-58    8.4   83     0.38   0.48   0.69   0.64   1        Bom      0.55      \n",
+      "-41    6.6   95     0.53   0.56   0.69   0.52   1        Bom      0.53      \n",
+      "-56    9.7   67     0.69   0.56   0.53   0.47   1        Bom      0.51      \n",
+      "-68    5.7   63     0.29   0.52   0.67   0.77   0        Ruim     0.50      \n",
+      "-63    4.1   55     0.64   0.52   0.76   0.66   0        Ruim     0.51      \n"
      ]
     }
    ],
@@ -259,7 +259,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "venv (3.9.6)",
    "language": "python",
    "name": "python3"
   },
@@ -273,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
