--- a/src/3.inputs.ipynb
+++ b/src/3.inputs.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "6cad41f7",
    "metadata": {},
    "outputs": [],
@@ -30,12 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "fb855109",
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_samples = 70 # quantidade de exemplos"
+    "num_samples = 50 # quantidade de exemplos"
    ]
   },
   {
@@ -48,138 +48,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "23e0ea91",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def generate_realistic_edge(is_good_link):\n",
+    "    if is_good_link:\n",
+    "        rssi_mean = -55\n",
+    "        rssi_std = 8\n",
+    "        rssi = np.random.normal(rssi_mean, rssi_std)\n",
+    "        rssi = np.clip(rssi, -85, -30)\n",
+    "        \n",
+    "        etx = 1 + np.random.exponential(0.8)\n",
+    "        etx = np.clip(etx, 1, 8)\n",
+    "        \n",
+    "        delay = np.random.lognormal(2.3, 0.6)\n",
+    "        delay = np.clip(delay, 1, 80)\n",
+    "        \n",
+    "        busy = np.random.beta(2, 5)\n",
+    "        busy = np.clip(busy, 0.05, 0.7)\n",
+    "        \n",
+    "    else:\n",
+    "        rssi_mean = -75\n",
+    "        rssi_std = 10\n",
+    "        rssi = np.random.normal(rssi_mean, rssi_std)\n",
+    "        rssi = np.clip(rssi, -95, -45)\n",
+    "        \n",
+    "        etx = 1 + np.random.gamma(3, 1.2)\n",
+    "        etx = np.clip(etx, 1.5, 15)\n",
+    "        \n",
+    "        delay = np.random.lognormal(3.5, 0.8)\n",
+    "        delay = np.clip(delay, 10, 150)\n",
+    "        \n",
+    "        busy = np.random.beta(5, 2)\n",
+    "        busy = np.clip(busy, 0.1, 1.0)\n",
+    "    \n",
+    "    rssi += np.random.uniform(-0.05, 0.05)\n",
+    "    etx += np.random.uniform(-0.01, 0.01)\n",
+    "    delay += np.random.uniform(-0.2, 0.2)\n",
+    "    busy += np.random.uniform(-0.005, 0.005)\n",
+    "    \n",
+    "    rssi = np.clip(rssi, -95, -30)\n",
+    "    etx = np.clip(etx, 1.0, 15)\n",
+    "    delay = np.clip(delay, 1, 150)\n",
+    "    busy = np.clip(busy, 0.0, 1.0)\n",
+    "    \n",
+    "    if rssi < -70:\n",
+    "        etx *= np.random.uniform(1.1, 1.4)\n",
+    "        delay *= np.random.uniform(1.05, 1.25)\n",
+    "        etx = min(etx, 15)\n",
+    "    \n",
+    "    if busy > 0.6:\n",
+    "        delay *= np.random.uniform(1.2, 1.6)\n",
+    "        etx *= np.random.uniform(1.05, 1.2)\n",
+    "        delay = min(delay, 150)\n",
+    "        etx = min(etx, 15)\n",
+    "    \n",
+    "    if etx > 7:\n",
+    "        delay *= np.random.uniform(1.1, 1.3)\n",
+    "        delay = min(delay, 150)\n",
+    "    \n",
+    "    rssi = round(rssi, 2)\n",
+    "    etx = round(etx, 3)\n",
+    "    delay = round(delay, 2)\n",
+    "    busy = round(busy, 4)\n",
+    "    \n",
+    "    return rssi, etx, delay, busy\n",
+    "\n",
     "edge_inputs = []\n",
-    "label_0_count = 0  \n",
-    "label_1_count = 0  \n",
+    "label_0_count = 0\n",
+    "label_1_count = 0\n",
     "target_per_label = num_samples // 2\n",
     "\n",
     "while len(edge_inputs) < num_samples:\n",
-    "\n",
-    "    # Decidir qual tipo de aresta gerar para manter equilíbrio\n",
     "    if label_0_count >= target_per_label:\n",
-    "        target_label = 1  # forçar aresta boa\n",
+    "        target_label = 1\n",
     "    elif label_1_count >= target_per_label:\n",
-    "        target_label = 0  # forçar aresta ruim\n",
+    "        target_label = 0\n",
     "    else:\n",
-    "        target_label = np.random.randint(0, 2)     # escolha aleatória\n",
+    "        target_label = 1 if np.random.random() < 0.52 else 0\n",
     "    \n",
-    "    # Gerar métricas baseadas no target_label\n",
-    "    if target_label == 1:  # aresta boa\n",
-    "        rssi = np.random.uniform(-65, -30)         # sinal mais forte\n",
-    "        etx = np.random.uniform(1, 4)              # menos retransmissões\n",
-    "        delay = np.random.uniform(1, 40)           # menor delay\n",
-    "        busy_fraction = np.random.uniform(0, 0.4)  # menos ocupado\n",
-    "    else:  # aresta ruim\n",
-    "        rssi = np.random.uniform(-90, -55)         # sinal mais fraco\n",
-    "        etx = np.random.uniform(3, 10)             # mais retransmissões\n",
-    "        delay = np.random.uniform(25, 100)         # maior delay\n",
-    "        busy_fraction = np.random.uniform(0.25, 1) # mais ocupado\n",
+    "    is_good = (target_label == 1)\n",
     "    \n",
-    "    # Adicionar alguma variação para não ficar muito determinístico\n",
-    "    noise_factor = 0.15\n",
+    "    rssi, etx, delay, busy = generate_realistic_edge(is_good)\n",
     "    \n",
-    "    if np.random.random() < noise_factor:\n",
-    "        # Ocasionalmente criar uma exceção para adicionar realismo\n",
-    "        if target_label == 1:\n",
-    "            # Tornar algumas métricas piores\n",
-    "            if np.random.random() < 0.5:\n",
-    "                rssi = np.random.uniform(-80, -60)\n",
-    "            if np.random.random() < 0.5:\n",
-    "                etx = np.random.uniform(2, 6)\n",
-    "        else:\n",
-    "            # Tornar algumas métricas melhores\n",
-    "            if np.random.random() < 0.5:\n",
-    "                rssi = np.random.uniform(-70, -40)\n",
-    "            if np.random.random() < 0.5:\n",
-    "                delay = np.random.uniform(5, 50)\n",
-    "    \n",
-    "    # Contar labels para manter balanceamento\n",
     "    if target_label == 0:\n",
     "        label_0_count += 1\n",
     "    else:\n",
     "        label_1_count += 1\n",
     "    \n",
-    "    # Arredondar valores para ficar mais realista\n",
-    "    rssi = round(rssi, 1)\n",
-    "    etx = round(etx, 1) \n",
-    "    delay = round(delay)\n",
-    "    busy_fraction = round(busy_fraction, 2)\n",
-    "    \n",
-    "    edge_inputs.append([rssi, etx, delay, busy_fraction])"
+    "    edge_inputs.append([rssi, etx, delay, busy])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "b71a351d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def generate_realistic_radnet_metrics(is_good_performance):\n",
+    "    if is_good_performance:\n",
+    "        apmr_global = np.random.beta(9, 2)\n",
+    "        apmr_global = 0.75 + (apmr_global * 0.20)\n",
+    "        \n",
+    "        mfsr_global = np.random.beta(10, 2)\n",
+    "        mfsr_global = 0.80 + (mfsr_global * 0.16)\n",
+    "        \n",
+    "        idg_global = np.random.beta(8, 3)\n",
+    "        idg_global = 0.68 + (idg_global * 0.24)\n",
+    "        \n",
+    "    else:\n",
+    "        apmr_global = np.random.beta(3, 6)\n",
+    "        apmr_global = 0.45 + (apmr_global * 0.32)\n",
+    "        \n",
+    "        mfsr_global = np.random.beta(3, 5)\n",
+    "        mfsr_global = 0.48 + (mfsr_global * 0.35)\n",
+    "        \n",
+    "        idg_global = np.random.beta(2, 6)\n",
+    "        idg_global = 0.42 + (idg_global * 0.32)\n",
+    "    \n",
+    "    apmr_global += np.random.uniform(-0.01, 0.01)\n",
+    "    mfsr_global += np.random.uniform(-0.01, 0.01)\n",
+    "    idg_global += np.random.uniform(-0.01, 0.01)\n",
+    "    \n",
+    "    apmr_global = np.clip(apmr_global, 0.40, 0.98)\n",
+    "    mfsr_global = np.clip(mfsr_global, 0.45, 0.98)\n",
+    "    idg_global = np.clip(idg_global, 0.40, 0.95)\n",
+    "    \n",
+    "    if mfsr_global < apmr_global:\n",
+    "        mfsr_global = apmr_global * np.random.uniform(1.0, 1.08)\n",
+    "        mfsr_global = min(mfsr_global, 0.98)\n",
+    "    \n",
+    "    if apmr_global < 0.55:\n",
+    "        mfsr_global *= np.random.uniform(0.85, 0.95)\n",
+    "        idg_global *= np.random.uniform(0.88, 0.96)\n",
+    "    \n",
+    "    if mfsr_global < 0.60:\n",
+    "        idg_global *= np.random.uniform(0.82, 0.93)\n",
+    "    \n",
+    "    apmr_global = round(apmr_global, 6)\n",
+    "    mfsr_global = round(mfsr_global, 6)\n",
+    "    idg_global = round(idg_global, 4)\n",
+    "    \n",
+    "    return apmr_global, mfsr_global, idg_global\n",
+    "\n",
     "radnet_inputs = []\n",
-    "good_performance_count = 0  \n",
-    "poor_performance_count = 0  \n",
+    "good_performance_count = 0\n",
+    "poor_performance_count = 0\n",
     "target_per_performance = num_samples // 2\n",
     "\n",
     "while len(radnet_inputs) < num_samples:\n",
-    "    # Decidir qual tipo de performance gerar para manter equilíbrio\n",
     "    if good_performance_count >= target_per_performance:\n",
-    "        target_performance = 0  # forçar cenário de performance ruim\n",
+    "        target_performance = 0\n",
     "    elif poor_performance_count >= target_per_performance:\n",
-    "        target_performance = 1  # forçar cenário de boa performance\n",
+    "        target_performance = 1\n",
     "    else:\n",
-    "        target_performance = np.random.randint(0, 2)  # escolha aleatória\n",
+    "        target_performance = 1 if np.random.random() < 0.52 else 0\n",
     "    \n",
-    "    # Gerar métricas baseadas no target_performance\n",
-    "    if target_performance == 1:  # cenário de boa performance\n",
-    "        # Baixa mobilidade, poucos pares comunicando, rede estável\n",
-    "        apmr_edge = np.random.uniform(0.75, 0.95)    # prefixes muito eficientes\n",
-    "        mfsr_edge = np.random.uniform(0.82, 0.95)    # alta taxa de sucesso\n",
-    "        idg_global = np.random.uniform(0.68, 0.90)   # boa entrega em grupo\n",
-    "    else:  # cenário de performance ruim\n",
-    "        # Alta mobilidade, muitos pares, rede congestionada\n",
-    "        apmr_edge = np.random.uniform(0.45, 0.72)    # prefixes menos eficientes\n",
-    "        mfsr_edge = np.random.uniform(0.50, 0.78)    # taxa de sucesso menor\n",
-    "        idg_global = np.random.uniform(0.45, 0.68)   # entrega mais difícil\n",
+    "    is_good = (target_performance == 1)\n",
+    "    apmr_g, mfsr_g, idg_g = generate_realistic_radnet_metrics(is_good)\n",
     "    \n",
-    "    # Adicionar alguma variação para não ficar muito determinístico\n",
-    "    noise_factor = 0.15\n",
-    "    if np.random.random() < noise_factor:\n",
-    "        # Ocasionalmente criar uma exceção para adicionar realismo\n",
-    "        if target_performance == 1:\n",
-    "            # Tornar algumas métricas piores (interferência inesperada)\n",
-    "            if np.random.random() < 0.5:\n",
-    "                apmr_edge = np.random.uniform(0.65, 0.80)\n",
-    "            if np.random.random() < 0.5:\n",
-    "                mfsr_edge = np.random.uniform(0.75, 0.85)\n",
-    "        else:\n",
-    "            # Tornar algumas métricas melhores (condições favoráveis)\n",
-    "            if np.random.random() < 0.5:\n",
-    "                apmr_edge = np.random.uniform(0.70, 0.85)\n",
-    "            if np.random.random() < 0.5:\n",
-    "                idg_global = np.random.uniform(0.65, 0.80)\n",
-    "    \n",
-    "    # Contar performance para manter balanceamento\n",
     "    if target_performance == 0:\n",
     "        poor_performance_count += 1\n",
     "    else:\n",
     "        good_performance_count += 1\n",
     "    \n",
-    "    # Garantir que os valores estejam nos ranges válidos [0,1]\n",
-    "    apmr_edge = max(0.45, min(0.98, apmr_edge))\n",
-    "    mfsr_edge = max(0.50, min(0.98, mfsr_edge))\n",
-    "    idg_global = max(0.45, min(0.95, idg_global))\n",
-    "    \n",
-    "    # Arredondar valores para ficar mais realista\n",
-    "    apmr_edge = round(apmr_edge, 6)\n",
-    "    mfsr_edge = round(mfsr_edge, 6)\n",
-    "    idg_global = round(idg_global, 2)\n",
-    "    \n",
-    "    radnet_inputs.append([apmr_edge, mfsr_edge, idg_global])"
+    "    radnet_inputs.append([apmr_g, mfsr_g, idg_g])"
    ]
   },
   {
@@ -192,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "e4db4e90",
    "metadata": {},
    "outputs": [
@@ -214,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "02880e56",
    "metadata": {},
    "outputs": [
